alignment fix

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ li {
     grid-column: 1;
 }
 h3 {
-    font-size:2rem;
+    font-size:1.5rem;
     grid-column: 2;
 }
 
@@ -154,7 +154,6 @@ input {
 }
 
  h4 {
-    font-size: 1.2rem;
     font-family: 'Manrope', sans-serif;
     font-family: 'Roboto', sans-serif;
     font-weight:900;
